[metadata]
name = TEcount
version = attr: tecount.main.__version__
author = Benedetto Polimeni
description = Count read alignments on transposable elements subfamilies, families and classes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bodegalab/tecount
project_urls =
    Bug Tracker = https://github.com/bodegalab/tecount/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = tecount
python_requires = >=3.7
install_requires =
    pysam >= 0.16.0.1

[options.entry_points]
console_scripts =
    TEcount = tecount.main:main
